# Robo-Karaoke

./: CMakeLists.txt  README.md  build.sh
src/: glad.c  main.cpp  shaderClass.cpp  vgkf.cpp
src/headers/: onnpu.h  vgkf.h
